default/tests/06-empty.stderr
error: #[derive(Default)] is not supported for empty enums
 --> tests/06-empty.rs:2:6
  |
2 | enum Empty{}
  |      ^^^^^
