default/tests/06-empty.rs
#[derive(Debug, PartialEq, Eq, derive_default::Default)]
enum Empty{}

fn main() {}
